signin 페이지 추가 및 라우터 기능 추가

--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,10 @@ img {
     /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
     display: block;
 }
+article {
+    min-height: 300px;
+}
+
 
 /*INNER*/
 .inner {
